# mcp-os-server

./: .gitignore  LICENSE  README.md  build_executable.py  nuitka_build_tools.py  pyproject.toml
.cursor/rules/: 00-python-uv-project.mdc  01-python.mdc  10-pytest.mdc  11-pydantic.mdc
docs/: asyncio-Eventloop控制逻辑研究.md  mcp-command-server-FDS.md  mcp-command-server-TDS.md  mcp-filesystem-server-FDS.md  subprocess编码问题研究.md
src/mcp_os_server/: filtered_fast_mcp.py  main.py  path_utils.py  server.py
src/mcp_os_server/command/: command_executor.py  exceptions.py  execute_command_utils.py  interfaces.py  models.py  output_logger.py  output_manager.py  process_manager.py  process_manager_anyio.py  process_manager_asyncio.py  process_manager_subprocess.py  server.py  web_manager.py
src/mcp_os_server/command/web_manager_templates/: log_viewer.html  process_detail.html  process_list.html  task_debug.html  thread_debug.html
src/mcp_os_server/filesystem/: filesystem_service.py  models.py  server.py
tests/: conftest.py  test_anyio.py
tests/mcp_os_server/: test_main_integration.py
tests/mcp_os_server/command/: cmd_for_test.py  integration_test_utils.py  print_args_and_stdin.py  run_with_chcp.cmd  test_cmd_file.cmd  test_command_executor.py  test_command_executor_integration.py  test_execute_command_utils.py  test_output_logger.py  test_output_manager.py  test_process_manager.py  test_process_manager_subprocess.py  test_server.py  test_web_manager.py
tests/mcp_os_server/filesystem/: __init__.py  conftest.py  test_filesystem_service.py  test_server.py
tests/resources/: command-config-test.yaml  test_relative.txt  中文测试.txt
tests/resources/env_folder/: uv.env
